Updated Colors and Sticky Navbar

--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,6 @@
 }
 
 body {
-  background: #191a29;
-  color: #ffffff;
   scroll-behavior: smooth;
 }
 
@@ -23,7 +21,8 @@ body {
   max-width: fit-content;
   position: relative;
   padding: 3px 15px;
-  background: #191a29;
+  color: #000000;
+  background: #ffffff;
   background-clip: padding-box;
   border: solid 3px transparent;
   border-radius: 50px;
@@ -40,4 +39,24 @@ body {
   margin: -5px;
   border-radius: inherit;
   background: linear-gradient(to right, #fdea40, #5ce1e6);
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: #ffffff;
+  box-shadow: -2px 0px 5px 0px #b7b7b7;
+  -webkit-animation: sticky 1.2s;
+  animation: sticky 1.2s;
+  z-index: 999;
+}
+
+@keyframes sticky {
+  from {
+    top: -100px;
+  }
+  to {
+    top: 0;
+  }
 }
